# RustBCA

./: .gitignore  Cargo.toml  README.md  RustBCA.c  RustBCA.h  dust_grain_and_nanopillar.py  ftridyn_surface_physics.py  generate_ftridyn_input.py  input.toml  package.py  plot.py  plot_distributions.py  pyproject.toml  requirements.txt  run_rustbca.py  rustbca.f90  setup.py  starting_depth.py  test_scattering.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_request.md  bug_report.md  feature_request.md  question.md
.github/workflows/: readme_doctests.yml  rustbca_compile_check.yml
circular/: dust_grain_and_nanopillar.py
docs/boron_nitride/: input.toml
docs/h_b_1kev/: H_on_B_1keV.toml
docs/h_he/: input_layers.toml
docs/he_ti_o2_al_si/: input.toml
examples/: RustBCA.c  benchmark_eam.py  benchmark_nnp.py  boron_nitride.toml  boron_nitride_0D.toml  boron_nitride_sphere.toml  boron_nitride_trimesh.toml  boron_nitride_wire.toml  boron_nitride_wire_homogeneous.toml  electronic_stopping_sensitivity.py  layered_geometry.toml  layered_geometry_1D.toml  lithium_vapor_shield.toml  multiple_interaction_potentials.toml  test_cube.py  test_morse.py  test_rustbca.f90  test_rustbca.py  test_sputtered_atom_spectra.py  titanium_dioxide_0D.toml  tungsten_tiles_trimesh.toml  tungsten_twist_trimesh.toml
examples/test_c/: RustBCA.c  RustBCA.h  a.out
paper/: paper.bib  paper.md
scripts/: Mesh2D.toml  Particles.toml  create_mesh2D.py  create_particle_parameters.py  formulas.py  materials.py  run_rustbca.py  rustbca.py
src/: bca.rs  consts.rs  enums.rs  geometry.rs  gui.rs  input.rs  interactions.rs  lib.rs  main.rs  material.rs  mesh.rs  output.rs  parry.rs  particle.rs  physics.rs  sphere.rs  structs.rs  tests.rs
src/RustBCA.egg-info/: PKG-INFO  SOURCES.txt
