[package]
name = "RustBCA"
version = "1.2.0"
default-run = "RustBCA"
authors = ["Jon Drobny <drobny2@illinois.edu>"]
edition = "2018"

[[bin]]
name = "RustBCA"
path = "src/main.rs"

[[bin]]
name = "RustBCAGUI"
path = "src/gui.rs"
required-features = ["gui"]

[lib]
name = "libRustBCA"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.2"
toml = "0.5.8"
anyhow = "1.0.38"
itertools = "0.10.0"
rayon = "1.5.0"
geo = {version = "0.17.1", optional = false}
indicatif = {version = "0.15.0", features=["rayon"]}
serde = { version = "1.0.123", features = ["derive"] }
hdf5 = {version = "0.7.1", optional = true}
openblas-src = {version  = "0.9", optional = true}
netlib-src = {version  = "0.8", optional = true}
intel-mkl-src = {version = "0.6.0", optional = true}
rcpr = { git = "https://github.com/drobnyjt/rcpr", optional = true}
ndarray = {version = "0.14.0", features = ["serde"], optional = true}
parry3d-f64 = {version = "0.2.0", optional = true}
egui = {version = "0.15.0", optional = true}

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
optional = true

[dev-dependencies]
float-cmp = "0.8.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[features]
hdf5_input = ["hdf5"]
cpr_rootfinder_openblas = ["rcpr", "openblas-src"]
cpr_rootfinder_netlib = ["rcpr", "netlib-src"]
cpr_rootfinder_intel_mkl = ["rcpr", "intel-mkl-src"]
distributions = ["ndarray"]
no_list_output = []
parry3d = ["parry3d-f64"]
accelerated_ions = []
python = ["pyo3"]
gui = ["egui"]
