[package]
name = "RustBCA"
version = "2.1.0"
default-run = "RustBCA"
authors = ["Jon Drobny <drobny2@illinois.edu>", "Jon Drobny <jdrobny@tae.com>"]
edition = "2021"

[[bin]]
name = "RustBCA"
path = "src/main.rs"

[lib]
name = "libRustBCA"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
toml = "0.7.4"
anyhow = "1.0.71"
itertools = "0.10.5"
rayon = "1.7.0"
geo = {version = "0.25", optional = false}
indicatif = {version = "0.15.0", features=["rayon"]}
serde = { version = "1.0.163", features = ["derive"] }
hdf5 = {version = "0.7.1", optional = true}
rcpr = { git = "https://github.com/drobnyjt/rcpr", optional = true}
ndarray = {version = "0.14.0", features = ["serde"], optional = true}
parry3d-f64 = {optional = true, version="0.2.0"}

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[dev-dependencies]
float-cmp = "0.8.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[features]
hdf5_input = ["hdf5"]
cpr_rootfinder = ["rcpr"]
distributions = ["ndarray"]
no_list_output = []
parry3d = ["parry3d-f64"]
accelerated_ions = []
python = ["pyo3"]
